--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -1,14 +1,41 @@
-##Spring Configuration
 server:
   port: 8080
 spring:
   application:
-    name: autenticacion
+    name: "autenticacion"
   devtools:
     add-properties: false
   h2:
     console:
       enabled: true
-      path: /h2
+      path: "/h2"
   profiles:
-    include:
+    include: null
+springdoc:
+  api-docs:
+    path: "/v3/api-docs"
+  swagger-ui:
+    path: "/swagger-ui"
+    try-it-out-enabled: true
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "health,prometheus"
+  endpoint:
+    health:
+      probes:
+        enabled: true
+cors:
+  allowed-origins: "http://localhost:4200,http://localhost:8080"
+routes:
+  paths:
+    usuarios: "/api/v1/usuarios"
+adapters:
+  r2dbc:
+    host: "localhost"
+    port: 5432
+    database: "Autenticacion"
+    schema: "crediya"
+    username: "postgres"
+    password: "root"
